stupid man forgot to add node_modules to .gitignore

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -6,6 +6,9 @@
       "dom.iterable",
       "esnext"
     ],
+    "typeRoots": [
+      "custom_typings/"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
